--- a/projects/restaurant-menu-app/package.json
+++ b/projects/restaurant-menu-app/package.json
@@ -11,6 +11,8 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-use-websocket": "^4.3.1",
+    "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
